fix code smell issues